Use alpine instead of busybox

--- a/imagebuild/Dockerfile
+++ b/imagebuild/Dockerfile
@@ -1,4 +1,5 @@
-FROM busybox:latest AS unzipper
+FROM alpine:latest AS unzipper
+RUN apk add --no-cache wget unzip
 RUN mkdir /tmp/playlists && \
   wget -O /tmp/hitster-youtube-playlists.zip https://github.com/andygruber/songseeker-hitster-playlists/releases/download/v0.0.99/hitster-youtube-playlists.zip && \
   unzip /tmp/hitster-youtube-playlists.zip -d /tmp/playlists/
