--- a/imagebuild/Dockerfile
+++ b/imagebuild/Dockerfile
@@ -5,6 +5,8 @@ RUN mkdir /tmp/playlists && \
   unzip /tmp/hitster-youtube-playlists.zip -d /tmp/playlists/
 
 FROM nginx
+COPY imagebuild/default.conf /etc/nginx/conf.d/default.conf
+
 RUN rm -rf /usr/share/nginx/html/*
 COPY *.js *.json *.csv *.html *.css *.png icons/* /usr/share/nginx/html/
 COPY --chmod=444 --from=unzipper /tmp/playlists/ /usr/share/nginx/html/
