--- a/imagebuild/default.conf
+++ b/imagebuild/default.conf
@@ -41,8 +41,10 @@ server {
     #    deny  all;
     #}
     location ~* /\.(html|js|css)$ {
-        expires 3h;
-        add_header Cache-Control "public, must-revalidate, proxy-revalidate";
+        expires 0;
+        add_header Cache-Control "public, no-cache, no-store, must-revalidate, proxy-revalidate";
+        add_header Pragma "no-cache";
+
     }
 
 }
