--- a/imagebuild/Dockerfile
+++ b/imagebuild/Dockerfile
@@ -9,4 +9,5 @@ COPY imagebuild/default.conf /etc/nginx/conf.d/default.conf
 
 RUN rm -rf /usr/share/nginx/html/*
 COPY *.js *.json *.csv *.html *.css *.png icons/* /usr/share/nginx/html/
-COPY --chmod=444 --from=unzipper /tmp/playlists/ /usr/share/nginx/html/
+RUN mkdir -m 755 -p /usr/share/nginx/html/playlists
+COPY --chmod=444 --from=unzipper /tmp/playlists/ /usr/share/nginx/html/playlists/
