--- a/imagebuild/Dockerfile
+++ b/imagebuild/Dockerfile
@@ -1,13 +1,9 @@
-FROM alpine:latest AS unzipper
-RUN apk add --no-cache wget unzip
-RUN mkdir /tmp/playlists && \
-  wget -O /tmp/hitster-youtube-playlists.zip https://github.com/andygruber/songseeker-hitster-playlists/releases/latest/download/hitster-youtube-playlists.zip && \
-  unzip /tmp/hitster-youtube-playlists.zip -d /tmp/playlists/
-
 FROM nginx
+
 COPY imagebuild/default.conf /etc/nginx/conf.d/default.conf
 
 RUN rm -rf /usr/share/nginx/html/*
 COPY *.js *.json *.csv *.html *.css *.png icons/* /usr/share/nginx/html/
+
+# Create playlists directory - mount your playlists and plex mappings here
 RUN mkdir -m 755 -p /usr/share/nginx/html/playlists
-COPY --chmod=444 --from=unzipper /tmp/playlists/ /usr/share/nginx/html/playlists/
