--- a/imagebuild/default.conf
+++ b/imagebuild/default.conf
@@ -7,6 +7,10 @@ server {
     location / {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
+
+        # Basic authentication
+        auth_basic "SongSeeker";
+        auth_basic_user_file /etc/nginx/.htpasswd;
     }
 
     #error_page  404              /404.html;
