--- a/imagebuild/default.conf
+++ b/imagebuild/default.conf
@@ -2,53 +2,59 @@ server {
     listen       80;
     server_name  localhost;
 
-    #access_log  /var/log/nginx/host.access.log  main;
+    root /usr/share/nginx/html;
 
+    # Auth server backend
+    location /auth/ {
+        proxy_pass http://127.0.0.1:8081/auth/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+    }
+
+    # Login page - no auth required
+    location = /login.html {
+        # No auth needed for login page
+    }
+
+    # Internal auth verification endpoint
+    location = /auth/verify {
+        internal;
+        proxy_pass http://127.0.0.1:8081/auth/verify;
+        proxy_pass_request_body off;
+        proxy_set_header Content-Length "";
+        proxy_set_header Cookie $http_cookie;
+    }
+
+    # Protected content
     location / {
-        root   /usr/share/nginx/html;
-        index  index.html index.htm;
+        # Check authentication via cookie
+        auth_request /auth/verify;
+        auth_request_set $auth_status $upstream_status;
 
-        # Basic authentication
-        auth_basic "SongSeeker";
-        auth_basic_user_file /etc/nginx/.htpasswd;
+        # Redirect to login on 401
+        error_page 401 = @login_redirect;
+
+        index index.html index.htm;
     }
 
-    #error_page  404              /404.html;
-
-    # redirect server error pages to the static page /50x.html
-    #
-    error_page   500 502 503 504  /50x.html;
-    location = /50x.html {
-        root   /usr/share/nginx/html;
+    # Redirect to login page
+    location @login_redirect {
+        return 302 /login.html?return=$request_uri;
     }
 
-    # proxy the PHP scripts to Apache listening on 127.0.0.1:80
-    #
-    #location ~ \.php$ {
-    #    proxy_pass   http://127.0.0.1;
-    #}
+    # Cache control for static assets
+    location ~* \.(html|js|css)$ {
+        auth_request /auth/verify;
+        error_page 401 = @login_redirect;
 
-    # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
-    #
-    #location ~ \.php$ {
-    #    root           html;
-    #    fastcgi_pass   127.0.0.1:9000;
-    #    fastcgi_index  index.php;
-    #    fastcgi_param  SCRIPT_FILENAME  /scripts$fastcgi_script_name;
-    #    include        fastcgi_params;
-    #}
-
-    # deny access to .htaccess files, if Apache's document root
-    # concurs with nginx's one
-    #
-    #location ~ /\.ht {
-    #    deny  all;
-    #}
-    location ~* /\.(html|js|css)$ {
         expires 0;
         add_header Cache-Control "public, no-cache, no-store, must-revalidate, proxy-revalidate";
         add_header Pragma "no-cache";
-
     }
 
+    # Error pages
+    error_page 500 502 503 504 /50x.html;
+    location = /50x.html {
+        root /usr/share/nginx/html;
+    }
 }
