--- a/imagebuild/Dockerfile
+++ b/imagebuild/Dockerfile
@@ -1,7 +1,10 @@
 FROM nginx
 
 # Install Python for auth server and htpasswd tools
-RUN apt-get update && apt-get install -y python3 apache2-utils && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y python3 python3-pip apache2-utils && rm -rf /var/lib/apt/lists/*
+
+# Install passlib for htpasswd authentication
+RUN pip3 install --break-system-packages passlib
 
 # Copy nginx config
 COPY imagebuild/default.conf /etc/nginx/conf.d/default.conf
