favicon and manifest fix

--- a/imagebuild/default.conf
+++ b/imagebuild/default.conf
@@ -16,6 +16,15 @@ server {
         # No auth needed for login page
     }
 
+    # Static assets that don't need auth
+    location = /favicon.ico {
+        # No auth needed
+    }
+
+    location = /manifest.json {
+        # No auth needed
+    }
+
     # Internal auth verification endpoint
     location = /auth/verify {
         internal;
