--- a/manifest.json
+++ b/manifest.json
@@ -2,15 +2,15 @@
     "name": "SongSeeker",
     "icons": [
      {
-      "src": "\/icon-96x96.png",
+      "src": "/icons/icon-96x96.png",
       "sizes": "96x96",
-      "type": "image\/png",
+      "type": "image/png",
       "density": "2.0"
      },
      {
-      "src": "\/icon-192x192.png",
+      "src": "/icons/icon-192x192.png",
       "sizes": "192x192",
-      "type": "image\/png",
+      "type": "image/png",
       "density": "4.0"
      }
     ]
