Fix for manifest loading

--- a/imagebuild/default.conf
+++ b/imagebuild/default.conf
@@ -25,6 +25,18 @@ server {
         # No auth needed
     }
 
+    location = /plex-manifest.json {
+        # No auth needed - loaded by app.js
+    }
+
+    location ~ ^/plex-mapping-.*\.json$ {
+        # No auth needed - loaded by app.js
+    }
+
+    location = /plex-config.json {
+        # No auth needed - loaded by app.js
+    }
+
     # Internal auth verification endpoint
     location = /auth/verify {
         internal;
