--- a/imagebuild/default.conf
+++ b/imagebuild/default.conf
@@ -4,6 +4,9 @@ server {
 
     root /usr/share/nginx/html;
 
+    # Use relative redirects to preserve HTTPS when behind reverse proxy
+    absolute_redirect off;
+
     # Auth server backend
     location /auth/ {
         proxy_pass http://127.0.0.1:8081/auth/;
