docker fix for addon game lists

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,11 +7,8 @@ services:
     ports:
       - "8042:80"
     volumes:
-      # Plex configuration (server URL and token)
-      - /mnt/user/appdata/songseeker/plex-config.json:/usr/share/nginx/html/plex-config.json:ro
-      # Plex mappings (manifest + mapping files)
-      - /mnt/user/appdata/songseeker/plex-manifest.json:/usr/share/nginx/html/plex-manifest.json:ro
-      - /mnt/user/appdata/songseeker/plex-mapping-de.json:/usr/share/nginx/html/plex-mapping-de.json:ro
+      # Plex JSON files (config, manifest, and all mapping files)
+      - /mnt/user/appdata/songseeker:/plex-data:ro
       # Auth credentials (htpasswd format)
       - /mnt/user/appdata/songseeker/.htpasswd:/etc/nginx/.htpasswd:ro
       # Cookie signing secret (generate with: openssl rand -hex 32 > .cookie_secret)
