--- a/imagebuild/default.conf
+++ b/imagebuild/default.conf
@@ -28,16 +28,9 @@ server {
         # No auth needed
     }
 
-    location = /plex-manifest.json {
-        # No auth needed - loaded by app.js
-    }
-
-    location ~ ^/plex-mapping-.*\.json$ {
-        # No auth needed - loaded by app.js
-    }
-
-    location = /plex-config.json {
-        # No auth needed - loaded by app.js
+    # Plex JSON files - served from mounted directory, no auth needed
+    location ~ ^/(plex-(?:manifest|config|mapping-.*?)\.json)$ {
+        alias /plex-data/$1;
     }
 
     # Internal auth verification endpoint
