Added custom game mode

--- a/tools/pyproject.toml
+++ b/tools/pyproject.toml
@@ -7,12 +7,16 @@ readme = "README.md"
 package-mode = false
 
 [tool.poetry.dependencies]
-python = "*"
-requests = "*"
+python = "^3.10"
+requests = ">=2.28.0"
 yt-dlp = "*"
+reportlab = ">=4.0.0"
+qrcode = {version = ">=7.4.0", extras = ["pil"]}
+Pillow = ">=10.0.0"
 
 [tool.poetry.scripts]
 plex-mapper = "plex_mapper.main:main"
+custom-game = "plex_mapper.custom_game:main"
 
 [build-system]
 requires = ["poetry-core"]
