Tool cleanup and simplification

--- a/tools/pyproject.toml
+++ b/tools/pyproject.toml
@@ -19,6 +19,8 @@ plex-mapper = "plex_mapper.main:main"
 custom-game = "plex_mapper.custom_game:main"
 plex-scan = "plex_mapper.plex_scan:main"
 validate-years = "plex_mapper.validate_years:main"
+check-missing = "plex_mapper.check_missing:main"
+mapping-tools = "plex_mapper.mapping_tools:main"
 
 [build-system]
 requires = ["poetry-core"]
